what exactly and actually happened 61st session/12.txt
Now let me check syntax and then integrate v40.41 functions into the scoring:
Action: $ node -c "/app/Lichess Bot-AlphaZero-Pure.user.js" 2>&1
Observation: /app/Lichess Bot-AlphaZero-Pure.user.js:28565
}
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v20.19.5
Exit code: 1